--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "push": "git add . && git commit -m \"nam up\" && git push origin"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -15,7 +16,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^7.0.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
